--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
 
-
+    implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
     implementation 'com.lfp.widget:SpringViewLibrary:1.1.3'
     implementation project(':ardf')
 }
