--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,13 @@ dependencies {
     implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
     implementation 'com.lfp.widget:SpringViewLibrary:1.1.3'
     implementation project(':ardf')
+
+
+    implementation "com.squareup.okhttp3:okhttp:3.2.0"
+    implementation "com.squareup.okio:okio:1.7.0"
+
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.14-RC1'
+    implementation 'com.artemzin.rxjava:proguard-rules:1.1.1.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
