--- a/ardf/build.gradle
+++ b/ardf/build.gradle
@@ -19,8 +19,14 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-
+    /*基础包*/
     compileOnly 'com.android.support:appcompat-v7:27.1.1'
     compileOnly 'com.android.support:recyclerview-v7:27.1.1'
-
+    /*网络*/
+    compileOnly "com.squareup.okhttp3:okhttp:3.2.0"
+    compileOnly "com.squareup.okio:okio:1.7.0"
+    /*RXJave*/
+    compileOnly 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    compileOnly 'io.reactivex.rxjava2:rxjava:2.1.14-RC1'
+    compileOnly 'com.artemzin.rxjava:proguard-rules:1.1.1.0'
 }
