--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     implementation 'com.tencent.mid:mid:3.73-release'
     implementation 'com.qq.mta:mta:3.3.1-release'
 //    implementation 'com.qq.visual:visual:3.3.1-release' 高级功能：可视化埋点
+
+    implementation 'com.orhanobut:logger:2.2.0'
 }
