--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.lfp.androidrapiddevelopmentframework"
         minSdkVersion 14
         targetSdkVersion 27
-        versionCode 1
-        versionName "0.0.1"
+        versionCode 2
+        versionName "0.0.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
@@ -73,6 +73,12 @@ android {
             dimension "market"
             manifestPlaceholders=[
                     MTA_CHANNEL:"华为"
+            ]
+        }
+        _360 {
+            dimension "market"
+            manifestPlaceholders=[
+                    MTA_CHANNEL:"360"
             ]
         }
     }
