--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         <activity android:name=".demo.Demo_NetRequest" />
         <activity android:name=".demo.Demo_RadioGroupControl" />
         <activity android:name=".demo.Demo_WebActivity" />
+        <activity android:name=".demo.Demo_Shadow" />
     </application>
 
 </manifest>
