--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,15 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion rootProject.ext.android.compileSdkVersion
+    buildToolsVersion rootProject.ext.android.buildToolsVersion
+
     defaultConfig {
         applicationId "com.lfp.androidrapiddevelopmentframework"
-        minSdkVersion 14
-        targetSdkVersion 27
-        versionCode 2
-        versionName "0.0.2"
+        minSdkVersion rootProject.ext.android.minSdkVersion
+        targetSdkVersion rootProject.ext.android.targetSdkVersion
+        versionCode 3
+        versionName "0.0.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
@@ -28,7 +30,9 @@ android {
             abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
         }
     }
-
+    sourceSets{
+//        jniLibs.srcDirs = ['src/main/libs']
+    }
     buildTypes {
         debug {
             buildConfigField "boolean", "LOG_DEBUG", "true"
@@ -68,6 +72,12 @@ android {
     /*批量打包配置*/
     flavorDimensions "market"
     productFlavors {
+        ARDF { //官方包
+            dimension "market"
+            manifestPlaceholders = [
+                    MTA_CHANNEL: "智者"
+            ]
+        }
         LiQu {
             dimension "market"
             manifestPlaceholders = [
@@ -105,6 +115,9 @@ android {
 }
 
 dependencies {
+    implementation project(':ardf')
+    implementation project(':gg_y')
+
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
@@ -112,7 +125,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
     implementation 'com.lfp.widget:SpringViewLibrary:1.1.3'
-    implementation project(':ardf')
     implementation 'com.squareup.okhttp3:okhttp:3.2.0'
     implementation 'com.squareup.okio:okio:1.7.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
@@ -122,18 +134,15 @@ dependencies {
     /*腾讯统计相关*/
     implementation 'com.tencent.mid:mid:3.73-release'
     implementation 'com.qq.mta:mta:3.3.1-release'
+//    implementation 'com.qq.visual:visual:3.3.1-release' 高级功能：可视化埋点
+//    implementation 'com.orhanobut:logger:2.2.0'
     /*推送*/
     implementation 'com.tencent.xinge:xinge:3.2.3-release' //信鸽jar
     implementation 'com.tencent.wup:wup:1.0.0.E-release' //wup包
     implementation 'com.tencent.mid:mid:4.0.6-release'  //mid包
 
-    //    implementation 'com.qq.visual:visual:3.3.1-release' 高级功能：可视化埋点
-//    implementation 'com.orhanobut:logger:2.2.0'
-    implementation files('src/main/libs/GDTUnionSDK.TBS.4.16.564.min.jar')
-
     implementation 'com.yanzhenjie:permission:2.0.0-rc8'
 
-//    implementation 'com.dingmouren.paletteimageview:paletteimageview:1.0.7'
 }
 
 //获取当前时间
