--- a/ardf/build.gradle
+++ b/ardf/build.gradle
@@ -6,6 +6,7 @@ android {
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 27
+        versionName "0.0.3"
     }
 
     buildTypes {
@@ -14,7 +15,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
+//    lintOptions {
+//        abortOnError false
+//    }
 }
 
 dependencies {
@@ -30,3 +33,5 @@ dependencies {
     compileOnly 'io.reactivex.rxjava2:rxjava:2.1.14-RC1'
     compileOnly 'com.artemzin.rxjava:proguard-rules:1.1.1.0'
 }
+
+apply from: "bintrayUpload.gradle"
