--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,18 +27,18 @@ android {
         ]
 
         ndk {
-            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
+            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a','x86'
         }
     }
     sourceSets{
-//        jniLibs.srcDirs = ['src/main/libs']
+
     }
     signingConfigs{
         release{
             storeFile file("app_ardf_secretkey.jks")
-            storePassword "xiaopi123"
+            storePassword ""
             keyAlias "ardf"
-            keyPassword "xiaopi123"
+            keyPassword ""
         }
     }
     buildTypes {
@@ -58,7 +58,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro', '../ardf/proguard-rules.pro'
             signingConfig signingConfigs.release
 
-            /*包文件命名*/
             android.applicationVariants.all { variant ->
                 variant.outputs.all {
                     outputFileName = "ARDF_v${defaultConfig.versionName}_${defaultConfig.versionCode}_${releaseTime()}_${variant.productFlavors[0].name}.apk"
@@ -68,7 +67,7 @@ android {
     }
     lintOptions {
         checkReleaseBuilds true
-        abortOnError true
+        abortOnError false
     }
     externalNativeBuild {
         cmake {
