--- a/ardf/build.gradle
+++ b/ardf/build.gradle
@@ -7,6 +7,12 @@ android {
         minSdkVersion 14
         targetSdkVersion 27
         versionName "0.0.3"
+
+        sourceSets {
+            main {
+                jniLibs.srcDirs = ['libs']
+            }
+        }
     }
 
     buildTypes {
