--- a/ardf/build.gradle
+++ b/ardf/build.gradle
@@ -35,15 +35,18 @@ android {
 dependencies {
     compileOnly fileTree(include: ['*.jar'], dir: 'libs')
     /*基础包*/
-    compileOnly 'com.android.support:appcompat-v7:27.1.1'
-    compileOnly 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
     /*网络*/
-    compileOnly "com.squareup.okhttp3:okhttp:3.2.0"
-    compileOnly "com.squareup.okio:okio:1.7.0"
+    implementation "com.squareup.okhttp3:okhttp:3.2.0"
+    implementation "com.squareup.okio:okio:1.7.0"
     /*RXJave*/
-    compileOnly 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    compileOnly 'io.reactivex.rxjava2:rxjava:2.1.14-RC1'
-    compileOnly 'com.artemzin.rxjava:proguard-rules:1.1.1.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.14-RC1'
+    implementation 'com.artemzin.rxjava:proguard-rules:1.1.1.0'
+    implementation "me.leolin:ShortcutBadger:1.1.22@aar"
+
+
 }
 
 apply from: "bintrayUpload.gradle"
