--- a/ardf/build.gradle
+++ b/ardf/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.14-RC1'
     implementation 'com.artemzin.rxjava:proguard-rules:1.1.1.0'
-    implementation "me.leolin:ShortcutBadger:1.1.22@aar"
+    api "me.leolin:ShortcutBadger:1.1.22@aar"
 
 
 }
