--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdkVersion rootProject.ext.android.minSdkVersion
         targetSdkVersion rootProject.ext.android.targetSdkVersion
         versionCode 4
-        versionName "0.0.5"
+        versionName "0.1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
@@ -30,25 +30,25 @@ android {
                 MTA_APPKEY   : "AUFW43Z4G4VN",
                 XG_ACCESS_ID : "2100296792",
                 XG_ACCESS_KEY: "A2DQNYG4137N"
-,
-                JPUSH_APPKEY  : "0ba76f57f881c14640b62c40",
-                JPUSH_CHANNEL :"JPUSH_CHANNEL",
-                JPUSH_PKGNAME :"com.lfp.androidrapiddevelopmentframework"
+                ,
+                JPUSH_APPKEY : "0ba76f57f881c14640b62c40",
+                JPUSH_CHANNEL: "JPUSH_CHANNEL",
+                JPUSH_PKGNAME: "com.lfp.androidrapiddevelopmentframework"
         ]
 
         ndk {
-            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a','x86'
+            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86'
         }
     }
-    sourceSets{
+    sourceSets {
 
     }
-    signingConfigs{
-        release{
-            storeFile file("app_ardf_secretkey.jks")
-            storePassword ""
-            keyAlias "ardf"
-            keyPassword ""
+    signingConfigs {
+        release {
+            storeFile file(rootProject.ext.key_path)
+            storePassword rootProject.ext.key_storePassword
+            keyAlias rootProject.ext.key_keyAlias
+            keyPassword rootProject.ext.key_keyPassword
         }
     }
     buildTypes {
